[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/menu/menu_bg.png" type="Texture" id=2]
[ext_resource path="res://shaders/smoke.shader" type="Shader" id=3]
[ext_resource path="res://Sprites/menu/intro_banner_princ.jpg" type="Texture" id=4]
[ext_resource path="res://Themes/button.tres" type="Theme" id=5]
[ext_resource path="res://Themes/fonts/Nickodemus-Extremus.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Instances/thumb_load.tscn" type="PackedScene" id=7]
[ext_resource path="res://Themes/button_small.tres" type="Theme" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/ratio = 1.0
shader_param/resolution = 3.0
shader_param/trasparency = 1.0
shader_param/color_add = 0.2
shader_param/side_fade = true
shader_param/side_mul = 1.6
shader_param/displ = 0.01

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="GDScript" id=3]
resource_name = "main_art_menu"
script/source = "#main_art_menu

extends TextureRect

func _process(delta):
	$menu.seek(inverse_lerp(-48,0,AudioServer.get_bus_peak_volume_left_db(1,0))*12)
"

[sub_resource type="Animation" id=4]
length = 12.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9, 10.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.716558, 0.70694, 0.882813, 1 ), Color( 0.891037, 0.934537, 0.996094, 1 ), Color( 0.497498, 0.629546, 0.816406, 1 ), Color( 0.891037, 0.934537, 0.996094, 1 ), Color( 0.945313, 0.227327, 0.192017, 1 ), Color( 0.891037, 0.934537, 0.996094, 1 ), Color( 0.796481, 0.980469, 0.432785, 1 ), Color( 0.891037, 0.934537, 0.996094, 1 ) ]
}

[sub_resource type="GDScript" id=5]
script/source = "#btn_strat_menu_new_game

extends \"res://Scripts/button_menu_generic.gd\""

[sub_resource type="GDScript" id=6]
resource_name = "btn_start_menu_load_game"
script/source = "#btn_start_menu_load_game

extends \"res://Scripts/button_menu_generic.gd\""

[sub_resource type="GDScript" id=7]
script/source = "#btn_start_menu_options

extends \"res://Scripts/button_menu_generic.gd\""

[sub_resource type="GDScript" id=8]
script/source = "#btn_start_menu_debug

extends \"res://Scripts/button_menu_generic.gd\""

[sub_resource type="GDScript" id=9]
script/source = "#btn_start_menu_quit

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	$conf.show()
	set(\"self_modulate\", Color(0))
	$conf/yes.grab_focus()
	focus_mode = 0"

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.195313, 0.185394, 0.185394, 0.707176 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.809601, 0.846411, 0.933594, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.109467, 0.132813, 0.113662, 0.88949 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.311462, 0.984375, 0.511233, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.151731, 0.257813, 0.117828, 0.707176 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.663712, 0.949219, 0.708322, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.195313, 0.185394, 0.185394, 0.707176 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.785141, 0.980469, 0.815661, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3
corner_detail = 7

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.159531, 0.332031, 0.170312, 0.790039 )
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color( 0.187473, 0.863281, 0.0472107, 1 )
corner_radius_top_left = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=15]
size = 62
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=16]
default_font = SubResource( 15 )
Button/colors/font_color = Color( 0.887695, 1, 0.6875, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.356705, 0.941406, 0.653623, 1 )
Button/colors/font_color_pressed = Color( 0.0239258, 0.875, 0.136959, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 10 )
Button/styles/focus = SubResource( 11 )
Button/styles/hover = SubResource( 12 )
Button/styles/normal = SubResource( 13 )
Button/styles/pressed = SubResource( 14 )

[sub_resource type="GDScript" id=17]
script/source = "#btn_start_menu_quit_ok

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	get_tree().quit()"

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.195313, 0.185394, 0.185394, 0.707176 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.809601, 0.846411, 0.933594, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.132813, 0.109467, 0.109467, 0.88949 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.984375, 0.311462, 0.484948, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.195313, 0.185394, 0.185394, 0.707176 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.953125, 0.620369, 0.543579, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.195313, 0.185394, 0.185394, 0.707176 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.949219, 0.763824, 0.763824, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_detail = 7

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.332031, 0.159531, 0.159531, 0.790039 )
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.863281, 0.0472107, 0.219351, 1 )
corner_radius_top_right = 3
corner_radius_bottom_right = 3

[sub_resource type="Theme" id=23]
default_font = SubResource( 15 )
Button/colors/font_color = Color( 0.957031, 0.537863, 0.441132, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.941406, 0.356705, 0.356705, 1 )
Button/colors/font_color_pressed = Color( 0.957031, 0.0747681, 0.0747681, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = SubResource( 18 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 20 )
Button/styles/normal = SubResource( 21 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="GDScript" id=24]
script/source = "#btn_start_menu_quit_no

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	get_parent().hide()
	get_node(\"../..\").set(\"self_modulate\",Color(1,1,1,1))
	get_node(\"../..\").focus_mode = 2"

[sub_resource type="GDScript" id=25]
script/source = "#btn_start_menu_options

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	audio_mng.play_btn(0)
	OS.window_fullscreen = !OS.window_fullscreen"

[sub_resource type="GDScript" id=26]
script/source = "#btn_start_menu_vfx

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	audio_mng.play_btn(0)
	g_mng.fl_vfx_enabled = !g_mng.fl_vfx_enabled"

[sub_resource type="GDScript" id=27]
script/source = "#btn_stage_test

extends \"res://Scripts/button_menu_generic.gd\""

[sub_resource type="GDScript" id=28]
script/source = "#btn_debug_mode

extends \"res://Scripts/button_menu_generic.gd\"

func _pressed():
	g_mng.fl_debug_mode = !g_mng.fl_debug_mode"

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.03125, 0.0192871, 0.0192871, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg_tex" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="vfx" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="clouds" type="ColorRect" parent="vfx"]
material = SubResource( 1 )
anchor_right = 1.0
margin_bottom = 435.0
rect_min_size = Vector2( 0, 230 )

[node name="main_art" type="TextureRect" parent="."]
editor/display_folded = true
modulate = Color( 0.716558, 0.70694, 0.882813, 1 )
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.0
margin_top = -437.0
margin_right = 241.0
margin_bottom = 163.0
texture = ExtResource( 4 )
script = SubResource( 3 )

[node name="menu" type="AnimationPlayer" parent="main_art"]
autoplay = "main_art_lights"
anims/main_art_lights = SubResource( 4 )

[node name="hbox_bttm" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -320.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 16

[node name="btns_main" type="GridContainer" parent="hbox_bttm"]
editor/display_folded = true
margin_right = 250.0
margin_bottom = 304.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8

[node name="g_new" type="Button" parent="hbox_bttm/btns_main"]
margin_right = 250.0
margin_bottom = 54.0
rect_min_size = Vector2( 250, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "New Game"
script = SubResource( 5 )

[node name="g_load" type="Button" parent="hbox_bttm/btns_main"]
margin_top = 62.0
margin_right = 250.0
margin_bottom = 116.0
rect_min_size = Vector2( 250, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Load Game"
script = SubResource( 6 )

[node name="options" type="Button" parent="hbox_bttm/btns_main"]
margin_top = 124.0
margin_right = 250.0
margin_bottom = 178.0
rect_min_size = Vector2( 250, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Options"
script = SubResource( 7 )

[node name="debug" type="Button" parent="hbox_bttm/btns_main"]
margin_top = 186.0
margin_right = 250.0
margin_bottom = 240.0
rect_min_size = Vector2( 250, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Debug Tools"
script = SubResource( 8 )

[node name="quit" type="Button" parent="hbox_bttm/btns_main"]
editor/display_folded = true
margin_top = 248.0
margin_right = 250.0
margin_bottom = 302.0
rect_min_size = Vector2( 250, 48 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Quit"
script = SubResource( 9 )

[node name="conf" type="HBoxContainer" parent="hbox_bttm/btns_main/quit"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="yes" type="Button" parent="hbox_bttm/btns_main/quit/conf"]
margin_right = 125.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = SubResource( 16 )
text = "Yes"
script = SubResource( 17 )

[node name="no" type="Button" parent="hbox_bttm/btns_main/quit/conf"]
margin_left = 125.0
margin_right = 250.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = SubResource( 23 )
text = "No"
script = SubResource( 24 )

[node name="cnt_load_game" type="Control" parent="hbox_bttm"]
editor/display_folded = true
visible = false
margin_left = 266.0
margin_right = 749.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="bg" type="ColorRect" parent="hbox_bttm/cnt_load_game"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.53072, 0.585938, 0.144196, 0.276235 )

[node name="hbox" type="HBoxContainer" parent="hbox_bttm/cnt_load_game"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="btns_load" type="GridContainer" parent="hbox_bttm/cnt_load_game/hbox"]
editor/display_folded = true
margin_right = 144.0
margin_bottom = 272.0

[node name="thumb_load" parent="hbox_bttm/cnt_load_game/hbox/btns_load" instance=ExtResource( 7 )]

[node name="cnt_opts" type="Control" parent="hbox_bttm"]
editor/display_folded = true
visible = false
margin_left = 598.0
margin_right = 914.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="bg" type="ColorRect" parent="hbox_bttm/cnt_opts"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0192261, 0.311906, 0.546875, 0.276235 )

[node name="hbox" type="HBoxContainer" parent="hbox_bttm/cnt_opts"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="btns_opt" type="GridContainer" parent="hbox_bttm/cnt_opts/hbox"]
margin_right = 250.0
margin_bottom = 272.0

[node name="fullscreen" type="Button" parent="hbox_bttm/cnt_opts/hbox/btns_opt"]
margin_right = 250.0
margin_bottom = 32.0
rect_min_size = Vector2( 250, 32 )
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "Fullscreen"
script = SubResource( 25 )

[node name="vfx" type="Button" parent="hbox_bttm/cnt_opts/hbox/btns_opt"]
margin_top = 36.0
margin_right = 250.0
margin_bottom = 68.0
rect_min_size = Vector2( 250, 32 )
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "vFX Shaders"
script = SubResource( 26 )

[node name="cnt_debug" type="Control" parent="hbox_bttm"]
margin_left = 266.0
margin_right = 1248.0
margin_bottom = 304.0
size_flags_horizontal = 3

[node name="bg" type="ColorRect" parent="hbox_bttm/cnt_debug"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25, 0.0253906, 0.0253906, 0.276235 )

[node name="btn_stage_test" type="Button" parent="hbox_bttm/cnt_debug"]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 25.0
rect_min_size = Vector2( 250, 32 )
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "Test Stage"
script = SubResource( 27 )

[node name="hbox" type="HBoxContainer" parent="hbox_bttm/cnt_debug"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 56.0
margin_right = -16.0
margin_bottom = -16.0

[node name="btns_opt" type="GridContainer" parent="hbox_bttm/cnt_debug/hbox"]
margin_right = 250.0
margin_bottom = 232.0

[node name="debug_mode" type="Button" parent="hbox_bttm/cnt_debug/hbox/btns_opt"]
margin_right = 250.0
margin_bottom = 32.0
rect_min_size = Vector2( 250, 32 )
size_flags_horizontal = 3
theme = ExtResource( 8 )
text = "Debug Mode"
script = SubResource( 28 )

